[package]
name = "yandex_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.30"
rfd = "0.15"
arboard = "3.4"
urlencoding = "2.1"
regex = "1.10"
uuid = "0.8"
directories = "5.0"
tiny_http = "0.12"
rand = "0.8"

[profile.release]
opt-level = 2